@@ -820,6 +820,7 @@ edit_aliasto=Alias of server
 edit_aliasdoms=Aliases for this server
 edit_subdoms=Sub-servers owned by this server
 edit_bw=Bandwidth limit
+edit_bw_disable=Disable if over limit bandwidth?
 edit_bwnone=Unlimited
 edit_bwpast_week=$1 every week
 edit_bwpast_month=$1 every month
@@ -828,6 +829,7 @@ edit_bwpast_=$1 every $2 days
 edit_bwusage=Bandwidth usage since $1
 edit_bwunknown=Unknown
 edit_bwnotify=(Notification sent at $1)
+edit_bwdis=(Will disable if over limit)
 edit_frame=Edit Forwarding Frame
 edit_framedesc=Change settings used to generate the HTML page for frame-forwarding, such as the target URL and title.
 edit_proxy=Edit Proxy Website
